# mitos

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
connections/: servers.yaml
connections/env/: gws.env.example
docs/: README.md  agents-md-structure.md  authoring-capabilities.md  lan-sync.md  managing-state.md  operator-console.md  org-templates.md
docs/connectors/: README.md  custom-servers.md  google-workspace.md  local-file.md
docs/targets/: antigravity.md  claude-app.md  claude-code.md  claude-desktop.md  gemini-cli.md
machines/: example-linux.yaml  example-windows-secondary.yaml  example-windows.yaml
registry/: README.md  user.yaml
registry/agents/: code-reviewer.md
registry/context/: agentic-root.md  assistant.md  org-roles.md  projects-index.md
registry/context/projects/: example-project-repo.md  example-project.md  mitos.md
registry/graph/: example-project.jsonld
registry/identity/: comms-style.md  operating-rules.md  org-hierarchy.md  security.md  session-protocol.md  who-i-am.md
registry/projects/: example-project.yaml  mitos.yaml
registry/prompts/: example-prompt.md
registry/skills/graph-bootstrap/: SKILL.md
registry/skills/gws/: SKILL.md
registry/skills/new-session/: SKILL.md
registry/skills/org-design/: SKILL.md
registry/skills/org-marketing/: SKILL.md
registry/skills/org-software/: SKILL.md
registry/skills/project-update/: SKILL.md
registry/templates/org/: README.md
registry/templates/org/design-firm/: org-hierarchy.md  org-skill.md  session-protocol.md
registry/templates/org/marketing-firm/: org-hierarchy.md  org-skill.md  session-protocol.md
registry/templates/org/software-firm/: org-hierarchy.md  org-skill.md  session-protocol.md
targets/: agents-md.yaml  antigravity.yaml  claude-ai.yaml  claude-app.yaml  claude-code.yaml  claude-desktop.yaml  gemini.yaml  hermes.yaml
(+2 files in other folders)
